--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ asyncpg = "^0.22.0"
 wavelink = "^0.9.9"
 discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus.git"}
 python-dotenv = "^0.15.0"
+praw = "^7.2.0"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
