--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ wavelink = "^0.9.9"
 discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus.git"}
 python-dotenv = "^0.15.0"
 praw = "^7.2.0"
+samp-client = "^3.0.1"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
