--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus.git"}
 python-dotenv = "^0.15.0"
 samp-client = "^3.0.1"
 beautifultable = "^1.0.1"
+pre-commit = "^2.12.1"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
