new config settings

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 TOKEN=Token here
 POSTGRESURI=postgres uri here
 PREFIX=PREFIX here
+Dev_Guild=CHANNEL ID
+Error_Channel=CHANNEL ID
+LAVALINK_IP=IP
+LAVALINK_PORT=PORT
+LAVALINK_PASS=PASS
