--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ python-dotenv = "^0.15.0"
 samp-client = "^3.0.1"
 beautifultable = "^1.0.1"
 pre-commit = "^2.12.1"
+aiocache = {extras = ["aioredis"], version= "^0.11.1"}
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
