FIX: Namespace mangling when two instances of the bot are runing on the same machine

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,15 @@
-TOKEN=Token here
-POSTGRESURI=postgres uri here
-PREFIX=PREFIX here
-Dev_Guild=CHANNEL ID
-Error_Channel=CHANNEL ID
-LAVALINK_IP=IP
-LAVALINK_PORT=PORT
-LAVALINK_PASS=PASS
+PREFIX=
+
+TOKEN=
+POSTGRESURI=
+
+LAVALINK_IP=
+LAVALINK_PORT=
+LAVALINK_PASS=
+
+REDIS_IP=
+REDIS_PORT=
+REDIS_NAMESPACE=
+
+Dev_Guild=
+Error_Channel=
