--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ samp-client = "^3.0.1"
 beautifultable = "^1.0.1"
 pre-commit = "^2.12.1"
 aiocache = {extras = ["aioredis"], version= "^0.11.1"}
+reactionmenu = "^1.0.7"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
