--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ beautifultable = "^1.0.1"
 pre-commit = "^2.12.1"
 aiocache = {extras = ["aioredis"], version= "^0.11.1"}
 reactionmenu = "^1.0.7"
+asyncspotify = "^0.12.1"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
